--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,42 @@
-name: Deploy via FTP
+name: Deploy Django via FTP
 
 on:
   push:
-    branches: [ main ]  # فقط روی branch اصلی اجرا شود
+    branches: [main]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Upload files via FTP
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Collect static files
+        run: |
+          python manage.py collectstatic --noinput
+
+      - name: Upload to FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.0
         with:
-          server: ${{ secrets.FTP_SERVER }}      # آدرس سرور FTP (مثلاً ftp.example.com)
-          username: ${{ secrets.FTP_USERNAME }}  # نام کاربری FTP
-          password: ${{ secrets.FTP_PASSWORD }}  # رمز عبور FTP
-          server-dir: /public_html/             # مسیر مقصد در سرور FTP
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./  # آپلود کل پروژه
+          server-dir: /public_html/
+          exclude: |
+            .git/
+            .github/
+            __pycache__/
+            *.sqlite3
+            *.env
