--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,27 @@
-name: Deploy Django via FTP
+name: Simple FTP Upload
 
 on:
   push:
     branches: [main]
 
 jobs:
-  deploy:
+  upload:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Collect static files
-        run: |
-          python manage.py collectstatic --noinput
-
-      - name: Upload to FTP
+      - name: Upload files via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.0
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./  # آپلود کل پروژه
+          local-dir: ./           # آپلود تمام محتویات ریپو
           server-dir: /public_html/
           exclude: |
             .git/
             .github/
-            __pycache__/
-            *.sqlite3
-            *.env
+            .gitignore
+            README.md
